src/styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: "Inter", sans-serif;
    background: #F5F7FB;
    padding: 50px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.blob1 {
    position: absolute;
    top: 0;
    right: 0;
    z-index: -1;
}

.blob2 {
    position: fixed;
    bottom: 0;
    left: 0;
    z-index: -1;
}

.intro-container {
    height: 80vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.show {
    display: none;
}

.title, .question {
    font-family: 'Karla', sans-serif;
    color: #293264;
    margin-bottom: 10px;
    font-weight: 700;
}

.description {
    color: #293264; 
    margin-bottom: 30px;
    text-align: center;
}

.intro-btn {
    width: 192px;
    height: 52px;
    border-radius: 15px;
    border: none;
    font-size: 16px;
    color: #F5F7FB;
    background: #4D5B9E;
}

.intro-btn:hover, .checkAns:hover {
    font-weight: bold;
}

.intro-btn:active, .checkAns:active {
    box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
}

.chose {
    background-color: greenyellow;
}

.quiz-container {
    display: flex;
    flex-direction: column;
}

.checkAns {
    font-size: 10px;
    padding: 10px 20px;
    border-radius: 10px;
    border: none;
    font-size: 10px;
    color: #F5F7FB;
    background: #4D5B9E;
    margin: 30px auto 0;
    align-items: center;
}

.question-container {
    margin: 15px;
}

.options-container {
    display: flex;
    justify-content: space-around;
}

.options {
    border-radius: 8px;
    padding: 8px 20px;
    border: 0.77px solid #4D5B9E;
    color: #4D5B9E;
    background: transparent;
}

.chosen {
    border-radius: 8px;
    padding: 8px 20px;
    border: none;
    background: #D6DBF5;
}

